# practice

bevy-experiment/: .gitignore  Cargo.toml  README.md
bevy-experiment/src/: main.rs
category-theory-for-programmers/: README.md
category-theory-for-programmers/chapter-1/: README.md
category-theory-for-programmers/chapter-2/: README.md
category-theory-for-programmers/chapter-3/: README.md
category-theory-for-programmers/chapter-4/: README.md
category-theory-for-programmers/chapter-5/: README.md
category-theory-for-programmers/chapter-6/: README.md
category-theory-for-programmers/chapter-7/: README.md
category-theory-for-programmers/chapter-8/: README.md
dns/: Cargo.toml
dns/src/: main.rs
fastbook/: 01_intro.ipynb  02_production.ipynb  03_ethics.ipynb  README.md
game/: Cargo.toml
game/src/: main.rs  (+7 more)
go-wiki/: .gitignore  README.md
hson/: .gitignore  README.md  hson.cabal  package.yaml
jlox/: .gitignore  LICENSE  README.md  pom.xml
learn-you-a-haskell-exercises/: .gitignore  README.md  exercises.cabal  package.yaml
maze-game/: README.md  pom.xml
mini-jam-98/: .gitignore  Cargo.toml  README.md
ostep/: Cargo.toml
posit-academy/: extension_4.Rmd  milestone_1.R  milestone_2.R  milestone_3.R  milestone_4.R
rust-grep/: .gitignore  Cargo.toml  README.md
rust-guessing-game/: Cargo.toml  README.md
rust-os/: .travis.yml  Cargo.toml  Earthfile  README.md
rust-os/src/: global_descriptor_table.rs  interrupts.rs  lib.rs  main.rs  vga_buffer.rs
rust-os/tests/: stack_overflow.rs
rust-web-server/: Cargo.toml  README.md
sicp/: README.md
(+105 files in other folders)
