[package]
name = "rust_os"
version = "1.0.0"
authors = ["jerred"]
edition = "2018"

[dependencies]
bootloader = "0.10.12"
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
